feat: update configuration and improve Rcon service initialization